# TicTacToe

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TicTacToe.py  board.py  colors.py  config.py  game.py  interface.py  player.py  pyproject.toml  requirements.txt  run.py
.github/: CODEOWNERS  settings.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  3-docs-bug.md  4-feature-request.md  5-enhancement-request.md  6-security-report.md  7-question-support.md  config.yml
.github/workflows/: python_linting.yml
src/: __init__.py  app.py  board.py  colors.py  config.py  game.py  game_state.py  interface.py  main.py  main_settings.json  misc.py  player.py  settings.txt  window.py
